PYIC-8573: Cleanup code